# fifa-agent-debate-prediction

./: .env  README.md  debate_output.md  pyproject.toml  system.yaml  system_default.yaml
debate_arena/: __init__.py  __main__.py  agent.py  analysis_parser.py  config.py  director.py  evidence.py  fetcher.py  main.py  match_config.py  models.py  predict.py  prompts.py  renderer.py  researcher.py
debate_arena.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
debate_output/: 2026-06-03_125748_Spain_vs_France（半决赛）.md  2026-06-03_135409_Spain_vs_France（半决赛）.md  2026-06-03_140656_Spain_vs_France（半决赛）.md  2026-06-03_150704_Spain_vs_France（半决赛）.md  2026-06-03_171426_Spain_vs_France（半决赛）.md  2026-06-08_023423_韩国_vs_捷克（group_第一轮）.json  2026-06-08_023423_韩国_vs_捷克（group_第一轮）.md  2026-06-08_031839_韩国_vs_捷克（group_第一轮）.json  2026-06-08_031839_韩国_vs_捷克（group_第一轮）.md  2026-06-08_034619_韩国_vs_捷克（group_第一轮）.json  2026-06-08_034619_韩国_vs_捷克（group_第一轮）.md  2026-06-08_035335_韩国_vs_捷克（group_第一轮）.json  2026-06-08_035335_韩国_vs_捷克（group_第一轮）.md  2026-06-08_035747_韩国_vs_捷克（group_第一轮）.json  2026-06-08_035747_韩国_vs_捷克（group_第一轮）.md  2026-06-08_041420_韩国_vs_捷克（group_第一轮）.json  2026-06-08_041420_韩国_vs_捷克（group_第一轮）.md  Spain_vs_France_20260603_013536.md  Spain_vs_France_20260603_015455.md  evidence_pool_韩国_vs_捷克（group_第一轮）.md
evidence/: bra_vs_arg_argentina.yaml  bra_vs_arg_brazil.yaml  bra_vs_arg_h2h.yaml
matches/: A_1st_round_kor_vs_cze.yaml  _template.yaml  semi_bra_vs_arg.yaml  semi_spa_vs_fra.yaml
tools/: BaiduTiyuAbstract.py  Mexico.html  analysis_data.json  page_source.html
(+64 files in other folders)
