[project]
name = "debate-arena"
version = "0.1.0"
description = "多智能体辩论决策系统 —— 最小学习版本"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "httpx>=0.27.0",
    "lxml>=5.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
search = [
    "duckduckgo-search>=6.0",
]
